prevent search bar from hiding on mobile

--- a/style.css
+++ b/style.css
@@ -4,8 +4,7 @@ html{
     /* Hide scrollbar for IE, Edge and Firefox */
     -ms-overflow-style: none;  /* IE and Edge */
     scrollbar-width: none;  /* Firefox */
-    scroll-snap-type: y mandatory;
-    scroll-behavior: smooth;
+    overflow: hidden;
 }
 
 ::-webkit-scrollbar { /* Hide scrollbar for Chrome, Safari and Opera */
@@ -13,12 +12,21 @@ html{
 }
 
 body {
+    position: fixed;
+    width: 100%;
+    height: 100%;
+    color: white;
+    background: black;
+    font-family: 'Roboto', sans-serif;
+    overflow-y: auto;
+    scroll-snap-type: y mandatory;
+    scroll-behavior: smooth;
+}
+
+.content{
     display: flex;
     justify-content: center;
     align-items: center;
-    color: white;
-    font-family: 'Roboto', sans-serif;
-    background: black;
     flex-direction: column;
 }
 
@@ -26,8 +34,7 @@ body {
     display: flex;
     justify-content: center;
     align-items: center;
-    height: 100vh; /* Fallback for browsers that do not support Custom Properties */
-    height: calc(var(--vh, 1vh) * 100);
+    height: 100vh;
     width: 100%;
     scroll-snap-align: start;
 }
@@ -36,8 +43,7 @@ body {
     margin: 20px 0;
     max-width: 600px;
     padding: 0 30px;
-    min-height: 100vh;/* Fallback for browsers that do not support Custom Properties */
-    min-height: calc(var(--vh, 1vh) * 100 - 64px);
+    min-height: calc(100vh - 64px);
     scroll-snap-align: start;
 }
 
